[package]
name = "tgd-visual-tests"
version = "2.0.147"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["webp"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
